# mcp-repl

./: .clippy.toml  .editorconfig  .gitignore  Cargo.toml  MAPPING.md  RESEARCH.md  TODO.md  mcp-repl.toml.example  package.json  pnpm-lock.yaml  repl.rs.prev  rust-toolchain.toml
src/: config.rs  engine.rs  main.rs  mcp.rs  mcp_manager.rs  shell.rs  util.rs
src/commands/: builtin.rs  call_tool.rs  dynamic_commands.rs  help.rs  list_resources.rs  list_tools.rs  mcp_tools.rs  mod.rs  test_commands.rs  tool.rs  tool_mapper.rs  utils.rs
src/config/: format.rs  map_parser.rs  mod.rs
src/scripts/: config.nu
src/util/: error.rs  format.rs  status.rs
